LPS-69009 Use fixed value to keep original alignment

--- a/modules/apps/foundation/frontend-css/frontend-css-web/src/main/resources/META-INF/resources/taglib/_discussion.scss
+++ b/modules/apps/foundation/frontend-css/frontend-css-web/src/main/resources/META-INF/resources/taglib/_discussion.scss
@@ -32,7 +32,7 @@
 	}
 
 	.lfr-discussion-body {
-		margin-left: 6%;
+		margin-left: 65px;
 		overflow: visible;
 
 		.lfr-discussion-message {
